--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="description" content="">
+  <meta charset="UTF-8" />
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Titulo</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
@@ -23,7 +24,13 @@
       <div class="conteudo-principal-escrito">
         <h1 class="conteudo-principal-escrito-titulo">Nome da Médica</h1>
         <h2 class="conteudo-principal-escrito-subtitulo">Especialidade</h2>
-        <button class="conteudo-principal-escrito-botao"><a class="texto-botao" href="https://api.whatsapp.com/send?phone=5562986292000&text=Olá!%20Eu%20gostaria%20de%20agendar%20uma%20Consulta%20com%20o%20Dra.%20Tal!" target="_blank">Agendar Consulta</a></button>
+        <a href="https://api.whatsapp.com/send?phone=5562986292000&text=Olá!%20Eu%20gostaria%20de%20agendar%20uma%20Consulta%20com%20o%20Dra.%20Tal!"
+          target="_blank">
+          <button class="conteudo-principal-escrito-botao">
+            <p class="texto-botao">Agendar Consulta</p>
+          </button>
+
+        </a>
       </div>
     </section>
 
@@ -36,7 +43,8 @@
     <section class="conteudo-agendar">
       <div>
         <p class="conteudo-agendar-texto">Entre em contato para agendar uma consulta</p>
-        <button class="conteudo-agendar-botao"><a href="https://api.whatsapp.com/send?phone=NUMERO-DE-TELEFONE" target="_blank">Agendar Consulta</a></button>
+        <button class="conteudo-agendar-botao"><a href="https://api.whatsapp.com/send?phone=NUMERO-DE-TELEFONE"
+            target="_blank">Agendar Consulta</a></button>
       </div>
     </section>
 
