fix: button bug

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
     <section class="conteudo-principal">
       <img class="conteudo-principal-imagem" src="assets/pngegg.png" alt="Foto da Médica">
       <div class="conteudo-principal-escrito">
-        <h1 class="conteudo-principal-escrito-titulo">Nome da Médica</h1>
+        <h1 class="conteudo-principal-escrito-titulo">Nome da Dra.</h1>
         <h2 class="conteudo-principal-escrito-subtitulo">Especialidade</h2>
-        <a href="https://api.whatsapp.com/send?phone=5562986292000&text=Olá!%20Eu%20gostaria%20de%20agendar%20uma%20Consulta%20com%20o%20Dra.%20Tal!"
-          target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=5562986292000&text=Olá!%20Eu%20gostaria%20de%20agendar%20uma%20Consulta%20com%20o%20Dra.%20Tal!" target="_blank">
           <button class="conteudo-principal-escrito-botao">
             <p class="texto-botao">Agendar Consulta</p>
           </button>
@@ -43,8 +42,7 @@
     <section class="conteudo-agendar">
       <div>
         <p class="conteudo-agendar-texto">Entre em contato para agendar uma consulta</p>
-        <button class="conteudo-agendar-botao"><a href="https://api.whatsapp.com/send?phone=NUMERO-DE-TELEFONE"
-            target="_blank">Agendar Consulta</a></button>
+        <button class="conteudo-agendar-botao"><a href="https://api.whatsapp.com/send?phone=NUMERO-DE-TELEFONE" target="_blank">Agendar Consulta</a></button>
       </div>
     </section>
 
