--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
   <main class="conteudo">
     <section class="conteudo-principal">
-      <img class="conteudo-principal-imagem" src="assets/pngegg.png" alt="Foto da Médica">
+      <img class="conteudo-principal-imagem" src="" alt="Foto da Médica">
       <div class="conteudo-principal-escrito">
-        <h1 class="conteudo-principal-escrito-titulo">Nome da Dra.</h1>
-        <h2 class="conteudo-principal-escrito-subtitulo">Especialidade</h2>
+        <h2 class="conteudo-principal-escrito-titulo">Dra. Izzys Martins</h2>
+        <h1 class="conteudo-principal-escrito-subtitulo">Neurologista</h1>
         <a href="https://api.whatsapp.com/send?phone=5562986292000&text=Olá!%20Eu%20gostaria%20de%20agendar%20uma%20Consulta%20com%20o%20Dra.%20Tal!" target="_blank">
           <button class="conteudo-principal-escrito-botao">
             <p class="texto-botao">Agendar Consulta</p>
@@ -35,14 +35,38 @@
 
     <section class="conteudo-secundario">
       <div>
-        <p class="conteudo-secundario-titulo">Como posso te ajudar?</p>
+        <p class="conteudo-secundario-titulo">COMO POSSO TE AJUDAR?</p>
+        <p class="conteudo-secundario-titulo-subtitulo">Especialidades e Tratamentos</p>
       </div>
+
+      <div class="conteudo-secundario-icones">
+        <div class="alzheimer">
+          <img src="assets/003-alzheimer.png" alt="Alzheimer">
+          <p class="icone-titulo">Alzheimer</p>
+        </div>
+        <div class="parkinson">
+          <img src="assets/002-doena.png" alt="Parkinson">
+          <p class="icone-titulo">Parkinson</p>
+        </div>
+        <div class="enxaqueca">
+          <img src="assets/001-enxaqueca.png" alt="Enxaqueca">
+          <p class="icone-titulo">Enxaqueca</p>
+        </div>
+      </div>
+
     </section>
 
     <section class="conteudo-agendar">
       <div>
-        <p class="conteudo-agendar-texto">Entre em contato para agendar uma consulta</p>
-        <button class="conteudo-agendar-botao"><a href="https://api.whatsapp.com/send?phone=NUMERO-DE-TELEFONE" target="_blank">Agendar Consulta</a></button>
+        <p class="conteudo-agendar-texto">ENTREM EM CONTATO PARA AGENDAR UMA CONSULTA</p>
+      </div>
+
+      <div>
+        <a href="https://api.whatsapp.com/send?phone=5562986292000&text=Olá!%20Eu%20gostaria%20de%20agendar%20uma%20Consulta%20com%20o%20Dra.%20Tal!" target="_blank">
+          <button class="conteudo-principal-escrito-botao">
+            <p class="texto-botao">Agendar Consulta</p>
+          </button>
+        </a>
       </div>
     </section>
 
