att:sobre&footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Titulo</title>
+  <title>Dra. Izzys Martins</title>
+  <link rel="icon" type="image/svg" href="assets/svg.svg">
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
@@ -71,22 +72,27 @@
     </section>
 
     <section class="conteudo-sobre">
-      <div>
-        <p class="conteudo-sobre-titulo">Conheça a Médica</p>
-        <p class="conteudo-sobre-subitulo">Dados da médica</p>
+      <div class="conteudo-sobre-texto">
+        <p class="conteudo-sobre-titulo">Conheça a </p>
+        <p class="conteudo-sobre-nome">Dra. Izzys Martins</p>
+        <p class="conteudo-sobre-subitulo">CRM 99999/GO | RQE 99999 </p>
         <ul class="conteudo-sobre-lista">
-          <li>Teste</li>
-          <li>Teste</li>
-          <li>Teste</li>
-          <li>Teste</li>
+          <li class="conteudo-lista">Graduada em Medicina pela </br>Universidade Evangélica de Anápolis</li>
+          <li class="conteudo-lista">Graduada em Medicina pela </br>Universidade Evangélica de Anápolis</li>
+          <li class="conteudo-lista">Graduada em Medicina pela </br>Universidade Evangélica de Anápolis</li>
+          <li class="conteudo-lista">Graduada em Medicina pela </br>Universidade Evangélica de Anápolis</li>
+
         </ul>
       </div>
-      <img class="conteudo-sobre-imagem" src="" alt="">
+      <img class="conteudo-sobre-imagem" src="assets/medica-sobre.jpg" alt="">
+
+
     </section>
 
+    <!-- Api do Google Maps
     <section>
-      <!-- Api do Google Maps -->
-    </section>
+      
+    </section> -->
 
     <!-- <div id="especialidades">
       
@@ -101,12 +107,23 @@
   </main>
 
   <footer class="rodape">
-    <img class="rodape-logo" src="" alt="">
-    <p class="rodape-texto">Nome da Médica - Especialidade</p>
-    <p class="rodape-texto">Endereço - Cidade - Estado - CEP</p>
-    <p class="rodape-texto">Telefone: (xx) xxxx-xxxx</p>
-    <p class="rodape-texto">E-mail: email@medica.com.br</p>
+    <div class="conteudo-rodape">
+      <img class="rodape-logo" src="assets/svg.svg" alt="">
+      <div class="text-footer">
+        <p class="rodape-texto">Dra. Izzys Martins - Neurologista </br></p>
+        <p class="rodape-texto">Endereço - Goiânia - GO - 99999-999 </br></p>
+        <p class="rodape-texto">Telefone: (62) 99999-9999 </br></p>
+        <p class="rodape-texto">E-mail: email@medica.com.br </br></p>
+      </div>
+    </div>
+
+
   </footer>
+
+  <div class="copyright">
+    <p class="copyright-text">Copyright © 2023 Dra. Izzys Martins | Desenvolvido por <a href="https://www.instagram.com/mateus.nass/" class="link-mateus">Mateus Nass</a></p>
+
+  </div>
   <script src="script.js"></script>
 </body>
 
