--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body>
   <header class="cabecalho">
-    <img class="cabecalho-logo" src="assets/svg.svg" alt="Logo Principal">
+    <a href="index.html"><img class="cabecalho-logo" src="assets/svg.svg" alt="Logo Principal"></a>
+
     <nav class="cabecalho-menu">
       <a class="cabecalho-menu-item" href="#sobre">Sobre a Médica</a>
       <a class="cabecalho-menu-item" href="#especialidades">Especialidades</a>
