fix: photo-test

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <main class="conteudo">
     <section class="conteudo-principal">
-      <img class="conteudo-principal-imagem" src="" alt="Foto da Médica">
+      <img class="conteudo-principal-imagem" src="assets/medica-teste.png" alt="Foto da Médica">
       <div class="conteudo-principal-escrito">
         <h2 class="conteudo-principal-escrito-titulo">Dra. Izzys Martins</h2>
         <h1 class="conteudo-principal-escrito-subtitulo">Neurologista</h1>
