att: inclusao de dados

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav class="cabecalho-menu">
       <a class="cabecalho-menu-item" href="#sobre">Sobre a Médica</a>
-      <a class="cabecalho-menu-item" href="#especialidades">Especialidades</a>
+      <a class="cabecalho-menu-item" href="pages/especialidades.html">Especialidades</a>
     </nav>
   </header>
 
@@ -76,11 +76,11 @@
       <div class="conteudo-sobre-texto">
         <p class="conteudo-sobre-titulo">Conheça a </p>
         <p class="conteudo-sobre-nome">Dra. Izzys Martins</p>
-        <p class="conteudo-sobre-subitulo">CRM 99999/GO | RQE 99999 </p>
+        <p class="conteudo-sobre-subitulo">CRM 20077/GO | RQE 1284 </p>
         <ul class="conteudo-sobre-lista">
-          <li class="conteudo-lista">Graduada em Medicina pela </br>Universidade Evangélica de Anápolis</li>
-          <li class="conteudo-lista">Graduada em Medicina pela </br>Universidade Evangélica de Anápolis</li>
-          <li class="conteudo-lista">Graduada em Medicina pela </br>Universidade Evangélica de Anápolis</li>
+          <li class="conteudo-lista">Graduada em Medicina pela Universidade </br> Evangélica de Anápolis</li>
+          <li class="conteudo-lista">Especialista em Neurologia pelo Hospital</br> das Clínicas de Goiás (UFG-GO)</li>
+          <li class="conteudo-lista">Graduada em Fisioterapia pela Pontifícia </br> Universidade Católica de Goiás</li>
           <li class="conteudo-lista">Graduada em Medicina pela </br>Universidade Evangélica de Anápolis</li>
 
         </ul>
@@ -113,7 +113,7 @@
       <div class="text-footer">
         <p class="rodape-texto">Dra. Izzys Martins - Neurologista </br></p>
         <p class="rodape-texto">Endereço - Goiânia - GO - 99999-999 </br></p>
-        <p class="rodape-texto">Telefone: (62) 99999-9999 </br></p>
+        <p class="rodape-texto">Telefone: (62) 99700-4650 </br></p>
         <p class="rodape-texto">E-mail: email@medica.com.br </br></p>
       </div>
     </div>
