--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="index.html"><img class="cabecalho-logo" src="assets/svg.svg" alt="Logo Principal"></a>
 
     <nav class="cabecalho-menu">
-      <a class="cabecalho-menu-item" href="#sobre">Sobre a Médica</a>
+      <a class="cabecalho-menu-item" href="sobre.html">Sobre a Médica</a>
       <a class="cabecalho-menu-item" href="pages/especialidades.html">Especialidades</a>
     </nav>
   </header>
