att: fotos novas

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dra. Izzys Martins</title>
-  <link rel="icon" type="image/svg" href="assets/svg.svg">
+  <link rel="icon" type="image/svg" href="assets/Logo-titulo-Dra-Izzys.png">
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
   <header id="header">
-    <a href="index.html"><img class="cabecalho-logo" src="assets/svg.svg" alt="Logo Principal"></a>
+    <a href="index.html"><img class="cabecalho-logo" src="assets/Logo-Dra-Izzys.png" alt="Logo Principal"></a>
 
     <nav id="nav">
       <button id="btn-mobile" aria-label="Abrir Menu" aria-haspopup="true" aria-expanded="false" aria-controls="menu">
@@ -32,7 +32,7 @@
   <main class="conteudo">
     <section class="conteudo-principal">
 
-      <img class="conteudo-principal-imagem" src="assets/medica-teste.png" alt="Foto da Médica">
+      <img class="conteudo-principal-imagem" src="assets/photo-pincipal-izzys (1).png" alt="Foto da Médica">
 
 
       <div class="conteudo-principal-escrito">
@@ -97,7 +97,7 @@
 
         </ul>
       </div>
-      <img class="conteudo-sobre-imagem" src="assets/medica-sobre.jpg" alt="">
+      <img class="conteudo-sobre-imagem" src="assets/foto-izzys-sobre.jpg" alt="Dra. Izzys Martins">
 
 
     </section>
@@ -121,7 +121,7 @@
 
   <footer class="rodape">
     <div class="conteudo-rodape">
-      <img class="rodape-logo" src="assets/svg.svg" alt="">
+      <img class="rodape-logo" src="assets/Logo-Dra-Izzys.png" alt="">
       <div class="text-footer">
         <p class="rodape-texto">Dra. Izzys Martins - Neurologista </br></p>
         <p class="rodape-texto">Endereço - Goiânia - GO - 99999-999 </br></p>
