--- a/index-GYN-DTI-037157.html
+++ b/index-GYN-DTI-037157.html
@@ -32,13 +32,14 @@
   <main class="conteudo">
     <section class="conteudo-principal">
 
-      <img class="conteudo-principal-imagem" src="/assets/foto-izzys-sobre.jpg" alt="Foto da Médica">
+      <img class="conteudo-principal-imagem" src="/assets/foto-izzys-sobre.jpg" alt="Foto da Médica"> 
 
 
       <div class="conteudo-principal-escrito">
         <h2 class="conteudo-principal-escrito-titulo">Dra. Izzys Martins</h2>
         <h1 class="conteudo-principal-escrito-subtitulo">Neurologista</h1>
-        <a href="https://api.whatsapp.com/send?phone=5562986292000&text=Olá!%20Eu%20gostaria%20de%20agendar%20uma%20Consulta%20com%20o%20Dra.%20Tal!" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=5562986292000&text=Olá!%20Eu%20gostaria%20de%20agendar%20uma%20Consulta%20com%20o%20Dra.%20Tal!"
+          target="_blank">
           <button class="conteudo-principal-escrito-botao">
             <p class="texto-botao">Agendar Consulta</p>
           </button>
@@ -55,15 +56,15 @@
 
       <div class="conteudo-secundario-icones">
         <div class="alzheimer">
-          <img src="assets/alzheimer-claro.png" alt="Alzheimer">
+          <img src="assets/003-alzheimer.png" alt="Alzheimer">
           <p class="icone-titulo">Alzheimer</p>
         </div>
         <div class="parkinson">
-          <img src="assets/parkinson.png" alt="Parkinson">
+          <img src="assets/002-doena.png" alt="Parkinson">
           <p class="icone-titulo">Parkinson</p>
         </div>
         <div class="enxaqueca">
-          <img src="assets/enxaqueca.png" alt="Enxaqueca">
+          <img src="assets/001-enxaqueca.png" alt="Enxaqueca">
           <p class="icone-titulo">Enxaqueca</p>
         </div>
       </div>
@@ -76,7 +77,8 @@
       </div>
 
       <div>
-        <a href="https://api.whatsapp.com/send?phone=5562986292000&text=Olá!%20Eu%20gostaria%20de%20agendar%20uma%20Consulta%20com%20o%20Dra.%20Tal!" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=5562986292000&text=Olá!%20Eu%20gostaria%20de%20agendar%20uma%20Consulta%20com%20o%20Dra.%20Tal!"
+          target="_blank">
           <button class="conteudo-principal-escrito-botao">
             <p class="texto-botao">Agendar Consulta</p>
           </button>
@@ -134,7 +136,8 @@
   </footer>
 
   <div class="copyright">
-    <p class="copyright-text">Copyright © 2023 Dra. Izzys Martins | Desenvolvido por <a href="https://www.instagram.com/mateus.nass/" class="link-mateus">Mateus Nass</a></p>
+    <p class="copyright-text">Copyright © 2023 Dra. Izzys Martins | Desenvolvido por <a
+        href="https://www.instagram.com/mateus.nass/" class="link-mateus">Mateus Nass</a></p>
 
   </div>
   <script src="script.js"></script>
