--- a/pages/especialidades/especialidades.html
+++ b/pages/especialidades/especialidades.html
@@ -6,13 +6,13 @@
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dra. Izzys Martins</title>
-  <link rel="icon" type="image/png" href="assets/logo-izzys-corte-titulo.png">
+  <link rel="icon" type="image/png" href="/assets/logo-izzys-corte-titulo.png">
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
   <header id="header">
-    <a href="index.html"><img class="cabecalho-logo" src="assets/logo-izzys-corte.png" alt="Logo Principal"></a>
+    <a href="/index.html"><img class="cabecalho-logo" src="/assets/logo-izzys-corte.png" alt="Logo Principal"></a>
 
     <nav id="nav">
       <button id="btn-mobile" aria-label="Abrir Menu" aria-haspopup="true" aria-expanded="false" aria-controls="menu">
@@ -20,41 +20,17 @@
       </button>
       <ul id="menu" role="menu">
         <li>
-          <a class="cabecalho-menu-item" href="pages/sobre/sobre.html">Sobre a Médica</a>
+          <a class="cabecalho-menu-item" href="/pages/sobre/sobre.html">Sobre a Médica</a>
         </li>
         <li>
-          <a class="cabecalho-menu-item" href="pages/especialidades/especialidades.html">Especialidades</a>
+          <a class="cabecalho-menu-item" href="especialidades.html">Especialidades</a>
         </li>
       </ul>
     </nav>
   </header>
 
   <main class="conteudo">
-    <section class="conteudo-principal">
 
-      <!-- <img class="conteudo-principal-imagem" src="/assets/foto-izzys-sobre.jpg" alt="Foto da Médica"> -->
-
-
-      <div class="conteudo-principal-escrito">
-        <h2 class="conteudo-principal-escrito-titulo">Dra. Izzys Martins</h2>
-        <h1 class="conteudo-principal-escrito-subtitulo">Neurologista</h1>
-
-        <div class="botao-presencial">
-          <a href="https://api.whatsapp.com/send?phone=5562997004650&text=Olá!%20Eu%20gostaria%20de%20agendar%20uma%20Consulta%20Presencial%20com%20o%20Dra.%20Izzys%20Martins!" target="_blank">
-            <button class="conteudo-principal-escrito-botao">
-              <p class="texto-botao">Agendar Consulta Presencial</p>
-            </button>
-          </a>
-        </div>
-        <div>
-          <a href="https://api.whatsapp.com/send?phone=5562997004650&text=Olá!%20Eu%20gostaria%20de%20agendar%20uma%20Consulta%20Online%20com%20o%20Dra.%20Izzys%20Martins!" target="_blank">
-            <button class="conteudo-principal-escrito-botao-online">
-              <p class="texto-botao">Agendar Consulta Online</p>
-            </button>
-          </a>
-        </div>
-      </div>
-    </section>
 
     <section class="conteudo-secundario">
       <div>
@@ -64,15 +40,15 @@
 
       <div class="conteudo-secundario-icones">
         <div class="alzheimer">
-          <img src="assets/alzheimer-roxo.png" alt="Alzheimer">
+          <img src="/assets/alzheimer-roxo.png" alt="Alzheimer">
           <p class="icone-titulo">Alzheimer</p>
         </div>
         <div class="parkinson">
-          <img src="assets/icone-esquecimento.png" alt="Esquecimento">
+          <img src="/assets/icone-esquecimento.png" alt="Esquecimento">
           <p class="icone-titulo">Esquecimento</p>
         </div>
         <div class="enxaqueca">
-          <img src="assets/enxaqueca-roxo.png" alt="Enxaqueca">
+          <img src="/assets/enxaqueca-roxo.png" alt="Enxaqueca">
           <p class="icone-titulo">Enxaqueca</p>
         </div>
       </div>
@@ -80,15 +56,15 @@
 
       <div class="conteudo-secundario-icones">
         <div class="alzheimer">
-          <img src="assets/icone-formigamento.png" alt="Formigamento">
+          <img src="/assets/icone-formigamento.png" alt="Formigamento">
           <p class="icone-titulo">Dormência</p>
         </div>
         <div class="parkinson">
-          <img src="assets/icone-avc.png" alt="AVC ou Derrame">
+          <img src="/assets/icone-avc.png" alt="AVC ou Derrame">
           <p class="icone-titulo">Derrame ou </br> AVC</p>
         </div>
         <div class="enxaqueca">
-          <img src="assets/icone-epilepsia.png" alt="Epilepisia">
+          <img src="/assets/icone-epilepsia.png" alt="Epilepisia">
           <p class="icone-titulo">Epilepsia</p>
         </div>
       </div>
@@ -131,24 +107,24 @@
         <div class="icone-universidades">
           <div>
             <a href="https://www4.unievangelica.edu.br/">
-              <img class="unievangelica" src="assets/logo_unievangelica.png" alt="Logo UniEvangelica">
+              <img class="unievangelica" src="/assets/logo_unievangelica.png" alt="Logo UniEvangelica">
             </a>
           </div>
 
           <div>
             <a href="https://ufg.br/">
-              <img class="ufg" src="assets/logo_ufg.png" alt="Logo UFG">
+              <img class="ufg" src="/assets/logo_ufg.png" alt="Logo UFG">
             </a>
           </div>
 
           <div>
             <a href="https://www.pucgoias.edu.br/">
-              <img class="puc" src="assets/logo_puc-goias.png" alt="Logo Puc Goias">
+              <img class="puc" src="/assets/logo_puc-goias.png" alt="Logo Puc Goias">
             </a>
           </div>
         </div>
       </div>
-      <img class="conteudo-sobre-imagem" src="assets/foto-izzys-sobre.jpg" alt="Dra. Izzys Martins">
+      <img class="conteudo-sobre-imagem" src="/assets/foto-izzys-sobre.jpg" alt="Dra. Izzys Martins">
 
 
     </section>
@@ -171,7 +147,7 @@
 
   <footer class="rodape">
     <div class="conteudo-rodape">
-      <img class="rodape-logo" src="assets/logo-izzys-corte.png" alt="">
+      <img class="rodape-logo" src="/assets/logo-izzys-corte.png" alt="">
       <div class="text-footer">
         <p class="rodape-texto">Dra. Izzys Martins - Neurologista </br></p>
         <p class="rodape-texto">Rua C-139, 853, Jardim América - </br>Goiânia - GO - 74275-070 </br></p>
@@ -187,7 +163,7 @@
     <p class="copyright-text">Copyright © 2023 Dra. Izzys Martins | Desenvolvido por <a href="https://www.instagram.com/mateus.nass/" class="link-mateus">Mateus Nass</a></p>
 
   </div>
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 </body>
 
 </html>
